welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:14: error: '<-' expected but ')' found.
  for (j -> 1 to l-1) {
                    ^Array2:17: error: illegal start of simple expression
} 
^