welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var h:Int =getMondeHauteur()
  var l:Int =getMondeLargeur()
  var T = new Array[Color](h)
  T(0)=getCouleurSol()
  for (i<- 1 to h-1) {
    avance()
    T(i)=getCouleurSol
  }
  recule(5)
  gauche()
  avance()
  droite()
  for (j -> 1 to l-1) {
    
  }
}